fix first year subheader z-index

--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,8 @@ h1, h2, h3, h4, h5, h6 {
 
     margin-left: -3rem;
     margin-bottom: -1rem;
+
+    z-index: 1;
 }
 
 .first-year__section-count {
